Import ncp3-gate 3ad5d4a655d1 re #12379 rb3953 Backport request for Illumos changeset 13379 "zfs should handle imbalanced LUNs" to the 3.1.x branch    bkport-4df42cc92254-zfs-imbalanced-luns.patch # User George Wilson <George.Wilson@delphix.com> # Date 1306674524 25200 1051 zfs should handle imbalanced luns

--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -1,3 +1,9 @@
+sunwzfskr (5.11.134-31-12267-12379) nexenta; urgency=high
+
+  * Issue 12379: Backport request for Illumos changeset 13379 "zfs should handle imbalanced LUNs" to the 3.1.x branch
+
+ -- Nexenta Systems <support@nexenta.com>  Fri, 14 Dec 2012 15:58:31 +0100
+
 sunwzfskr (5.11.134-31-12266-12648) nexenta; urgency=high
 
   * Issue 12648: backout zfs++ changes
