--- a/debian/packages/sunwnfscu/debian/changelog
+++ b/debian/packages/sunwnfscu/debian/changelog
@@ -1,3 +1,9 @@
+sunwnfscu (5.11.134-31-1-12763) nexenta; urgency=low
+
+  * Issue 12279: statd is not handling incoming SM_NOTIFY properly when the hostname is not resolvable
+
+ -- Nexenta Systems <support@nexenta.com>  Sat, 19 Jan 2013 19:51:38 +0100
+
 sunwnfscu (5.11.134-31-0-100) nexenta; urgency=low
 
   * Renumber packages in preparation for 3.1 release
