Import ncp3-gate 8bb41eb46f0c re #12770 rb4161 zio latency reports can produce false positives    zfs-vdev-timeout-b.patch # User Albert Lee <trisk@nexenta.com> # Date 1358981190 18000 # Branch stable-4.0 # Node ID 9c4abf9a775f2e79ed58f8597c62b4e9aaa9ec0a [mq]: zio-latency-b

--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -1,3 +1,10 @@
+sunwzfskr (5.11.134-31-12268-12770) nexenta; urgency=high
+
+  * Issue 12644: ASSERT() in zio.c in io error path
+  * Issue 12770: zio latency reports can produce false positives
+
+ -- Nexenta Systems <support@nexenta.com>  Wed, 23 Jan 2012 12:40:30 -0400
+
 sunwzfskr (5.11.134-31-12267-12379) nexenta; urgency=high
 
   * Issue 12379: Backport request for Illumos changeset 13379 "zfs should handle imbalanced LUNs" to the 3.1.x branch
