--- a/debian/packages/sunwsmbfsu/debian/changelog
+++ b/debian/packages/sunwsmbfsu/debian/changelog
@@ -1,3 +1,9 @@
+sunwsmbfsu (5.11.134-31-12970-12739) nexenta; urgency=high
+
+  * Issue 12739: AD join with lmauth_level=2 fails
+
+ -- Gate Keeper <support@nexenta.com> Thu, 17 Jan 2013 20:13:00 -0500
+
 sunwsmbfsu (5.11.134-31-12464-0) nexenta; urgency=high
 
   * Issue 12464: Spurious errors setting up new sessions
