Import ncp3-gate dace079b91bf closes #13066 backport 7126 to stable-3.1    bkport-208063a512f8-nx7126.patch # User Dmitry.Savitsky@nexenta.com # Date 1326853380 0 # Node ID c48a264e8aa9edbcca51a424e979ae61f94d2611 re #7126 rb4153 smbd panic with missing negotiate challenge

--- a/debian/packages/sunwsmbskr/debian/changelog
+++ b/debian/packages/sunwsmbskr/debian/changelog
@@ -1,3 +1,9 @@
+sunwsmbskr (5.11.134-31-13066-7126) nexenta; urgency=high
+
+  * Issue 7126: smbd panic with missing negotiate challenge
+
+ -- Gate Keeper <support@nexenta.com> Fri, 18 Jan 2013 02:23:00 +0000
+
 sunwsmbskr (5.11.134-31-10734-0) nexenta; urgency=high
 
   * Issue 10734: NT Trans. Notify returning too quickly
