--- a/debian/packages/sunwmptsas/debian/changelog
+++ b/debian/packages/sunwmptsas/debian/changelog
@@ -1,3 +1,9 @@
+sunwmptsas (5.11.134-31-11659-12927) nexenta; urgency=high
+
+  * Issue 12927: LSI 2008 mpt_sas
+
+ -- Nexenta Systems <support@nexenta.com>  Thu, 31 Jan 2013 16:55:23 -0400
+
 sunwmptsas (5.11.134-31-11658-9517) nexenta; urgency=high
 
   * Issue 9517: After single disk fault patch installed single disk fault
