Import ncp3-gate 8db8189c21eb re 13057 rb4141 backport 12735 stmf fixes to stable-3.1    bkport-26768f901bf6-nx12375.patch

--- a/debian/packages/sunwstmf/debian/changelog
+++ b/debian/packages/sunwstmf/debian/changelog
@@ -1,3 +1,10 @@
+sunwstmf (5.11.134-31-13101-13056) nexenta; urgency=high
+
+  * Issue 12375: Create ALUA support on NexentaStor; Failover causes loss
+  of storage
+
+ -- Nexenta Systems <support@nexenta.com> Fri, 08 Fed 2013 16:37:49 -0000
+
 sunwstmf (5.11.134-31-13100-12981) nexenta; urgency=low
 
   * Issue 12981: Panic due to possible race between LU coming to ready state and COMSTAR (stmf) sbd task
