--- a/debian/packages/sunwsmbfsu/debian/changelog
+++ b/debian/packages/sunwsmbfsu/debian/changelog
@@ -1,3 +1,9 @@
+sunwsmbfsu (5.11.134-31-12971-12739) nexenta; urgency=high
+
+  * Issue 12739: AD join with lmauth_level=2 fails (2)
+
+ -- Nexenta Systems <support@nexenta.com> Thu, 14 Feb 2013 16:30:00 -0500
+
 sunwsmbfsu (5.11.134-31-12970-12739) nexenta; urgency=high
 
   * Issue 12739: AD join with lmauth_level=2 fails
