--- a/debian/packages/sunwcsu/debian/changelog
+++ b/debian/packages/sunwcsu/debian/changelog
@@ -1,3 +1,9 @@
+sunwcsu (5.11.134-31-13249-13190) nexenta; urgency=high
+
+  * Issue 13190: idmapd error -9961 (No AD servers)
+
+ -- Nexenta Systems <support@nexenta.com>  Sat, 23 Feb 2013 18:30:35 -0500
+
 sunwcsu (5.11.134-31-11339-0) nexenta; urgency=low
 
   * Issue 11339: Enhancments for OpenIPMI driver
