--- a/debian/packages/sunwsmbsu/debian/changelog
+++ b/debian/packages/sunwsmbsu/debian/changelog
@@ -1,3 +1,9 @@
+sunwsmbsu (5.11.134-31-13249-13190) nexenta; urgency=high
+
+  * Issue 13190: idmapd error -9961 (No AD servers)
+
+ -- Nexenta Systems <support@nexenta.com>  Sat, 23 Feb 2013 18:30:35 -0500
+
 sunwsmbsu (5.11.134-31-13066-7126) nexenta; urgency=high
 
   * Issue 7126: smbd panic with missing negotiate challenge
