--- a/debian/packages/sunwos86r/debian/changelog
+++ b/debian/packages/sunwos86r/debian/changelog
@@ -1,3 +1,9 @@
+sunwos86r (5.11.134-31-9675-13247) nexenta; urgency=medium
+
+  * Issue 13247: Large, fixed command timeouts impair command drop
+
+ -- Nexenta Systems <support@nexenta.com>  Mon, 25 Feb 2013 12:00:00 -0500
+
 sunwos86r (5.11.134-31-9674-8622) nexenta; urgency=low
 
   * Issue 8622: SSD added to a zpool does not appear to be recognised with a 4KB native block size
