--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -1,3 +1,10 @@
+sunwzfskr (5.11.134-31-12270-12619) nexenta; urgency=high
+
+  * Issue 12619: Deadlocked zfs txg processing in dsl_sync_task_group_sync()
+  * Issue 13204: zfs receive/rollback deadlock
+
+ -- Alexander Stetsenko <ams@nexenta.com>  Mon, 25 Feb 2013 06:18:25 -0800
+
 sunwzfskr (5.11.134-31-12269-10054) nexenta; urgency=high
 
   * Issue 10054: Long export time causes failover to fail
