--- a/debian/packages/sunwmptsas/debian/changelog
+++ b/debian/packages/sunwmptsas/debian/changelog
@@ -1,3 +1,10 @@
+sunwmptsas (5.11.134-31-11660-13272) nexenta; urgency=high
+
+  * Issue 13272: Stucked Inquiry commands put a pool to degraded state
+    with too many errors without displaying errors in zpool status
+
+ -- Nexenta Systems <support@nexenta.com>  Fri, 08 Mar 2013 11:37:00 -0400
+
 sunwmptsas (5.11.134-31-11659-12927) nexenta; urgency=high
 
   * Issue 12927: LSI 2008 mpt_sas
