Import ncp3-gate 00c17f487158 and merge: ae43e7f141bd 218c8bb50610 re #13333 rb4365 - eliminated spa_update_iotime() to fix the stats    zfs-vdev-latency-c.patch

--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -1,3 +1,9 @@
+sunwzfskr (5.11.134-31-12271-13333) nexenta; urgency=high
+
+  * Issue 13333: zpool iostat doubles metrics for pool operations and bandwidth
+
+ -- Ilya Usvyatsky <ilya.usvyatsky@nexenta.com>  Sat, 09 Mar 2013 18:22:58 -0500
+
 sunwzfskr (5.11.134-31-12270-12619) nexenta; urgency=high
 
   * Issue 12619: Deadlocked zfs txg processing in dsl_sync_task_group_sync()
