Import ncp3-gate 9ca5724f8fe9 re #13316 rb4358 kernel panic during failover with autosync running on the active node    zfs-13318.patch

--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -1,3 +1,9 @@
+sunwzfskr (5.11.134-31-12272-13318) nexenta; urgency=high
+
+  * Issue 13318: kernel panic during failover with autosync running on the active node
+
+ -- Nexenta Systems <support@nexenta.com>  Mon, 11 Mar 2013 21:18:25 -0500
+
 sunwzfskr (5.11.134-31-12271-13333) nexenta; urgency=high
 
   * Issue 13333: zpool iostat doubles metrics for pool operations and bandwidth
