--- a/debian/packages/sunwzfsr/debian/changelog
+++ b/debian/packages/sunwzfsr/debian/changelog
@@ -1,3 +1,9 @@
+sunwzfsr (5.11.134-31-9469-10054) nexenta; urgency=low
+
+  * Issue 10054: Parallel unmount of datasets for zpool export
+
+ -- Ilys Usvyatsky <ilya.usvyatsky@nexenta.com>  Wed, 13 Mar 2013 21:26:18 -0400
+
 sunwzfsr (5.11.134-31-9468-12379) nexenta; urgency=low
 
   * Issue 12379: Backport request for Illumos changeset 13379 "zfs should handle imbalanced LUNs" to the 3.1.x branch
