Import ncp3-gate 3a67e2dcd3bb re #10054 #13409 rb4392 fix for a hang in a parallel unmount    zfs-parallel-unmount-for-export-b.patch

--- a/debian/packages/sunwzfsu/debian/changelog
+++ b/debian/packages/sunwzfsu/debian/changelog
@@ -1,3 +1,9 @@
+sunwzfsu (5.11.134-31-12269-10054) nexenta; urgency=low
+
+  * Issue 10054: Parallel unmount of datasets for zpool export - minor fix
+
+ -- Ilys Usvyatsky <ilya.usvyatsky@nexenta.com>  Sat, 16 Mar 2013 17:14:23 -0400
+
 sunwzfsu (5.11.134-31-12268-10054) nexenta; urgency=low
 
   * Issue 10054: Parallel unmount of datasets for zpool export
