--- a/debian/packages/sunwzfsr/debian/changelog
+++ b/debian/packages/sunwzfsr/debian/changelog
@@ -1,3 +1,9 @@
+sunwzfsr (5.11.134-31-9470-10054) nexenta; urgency=low
+
+  * Issue 10054: Parallel unmount of datasets for zpool export - minor fix
+
+ -- Ilys Usvyatsky <ilya.usvyatsky@nexenta.com>  Sat, 16 Mar 2013 17:14:23 -0400
+
 sunwzfsr (5.11.134-31-9469-10054) nexenta; urgency=low
 
   * Issue 10054: Parallel unmount of datasets for zpool export
