--- a/debian/packages/sunwzfsr/debian/changelog
+++ b/debian/packages/sunwzfsr/debian/changelog
@@ -1,3 +1,9 @@
+sunwzfskr (5.11.134-31-9471-10054) nexenta; urgency=high
+
+  * Issue 10054: asynchronous ARC/L2ARC eviction to reduce zpool export time
+
+ -- Boris Protopopov <boris.protopopov@nexenta.com>  Mon, 25 Mar 2013 11:19:25 -0500
+
 sunwzfsr (5.11.134-31-9470-10054) nexenta; urgency=low
 
   * Issue 10054: Parallel unmount of datasets for zpool export - minor fix
