--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -1,3 +1,9 @@
+sunwzfskr (5.11.134-31-12274-12619) nexenta; urgency=high
+
+  * Issue 12619: Deadlocked zfs txg processing in dsl_sync_task_group_sync() (updated)
+
+ -- Alexander Stetsenko <ams@nexenta.com>  Tue, 26 Mar 2013 16:35:00 +0400
+
 sunwzfskr (5.11.134-31-12273-10054) nexenta; urgency=high
 
   * Issue 10054: asynchronous ARC/L2ARC eviction to reduce zpool export time
