Import ncp3-gate daf902d72b2e re #10054 rb4436 set zfs_fastflush to 1 to enable asynchronous arc flush/evict by default

--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -1,3 +1,9 @@
+sunwzfskr (5.11.134-31-12275-10054) nexenta; urgency=high
+
+  * Issue 10054: turn on zfs_fastflush by default
+
+ -- Boris Protopopov <boris.protopopov@nexenta.com>  Wed, 27 Mar 2013 16:21:29 -0700
+
 sunwzfskr (5.11.134-31-12274-12619) nexenta; urgency=high
 
   * Issue 12619: Deadlocked zfs txg processing in dsl_sync_task_group_sync() (updated)
