--- a/debian/packages/sunwzfsr/debian/changelog
+++ b/debian/packages/sunwzfsr/debian/changelog
@@ -1,3 +1,9 @@
+sunwzfsr (5.11.134-31-9472-13409) nexenta; urgency=low
+
+  * Issue 13409: Parallel unmount of datasets for zpool export - another fix
+
+ -- Ilys Usvyatsky <ilya.usvyatsky@nexenta.com>  Wed, 27 Mar 2013 14:53:56 -0700
+
 sunwzfsr (5.11.134-31-9471-10054) nexenta; urgency=high
 
   * Issue 10054: asynchronous ARC/L2ARC eviction to reduce zpool export time
