--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -1,3 +1,9 @@
+sunwzfskr (5.11.134-31-12276-13503) nexenta; urgency=high
+
+  * Issue 13503: revert changes by (5.11.134-31-12274-12619)
+
+ -- Boris Protopopov <boris.protopopov@nexenta.com>  Wed, 27 Mar 2013 17:03:17 -0700
+
 sunwzfskr (5.11.134-31-12275-10054) nexenta; urgency=high
 
   * Issue 10054: turn on zfs_fastflush by default
