Import ncp3-gate 600ff0863c03 re #13409 rb4447 - fixed private section in libzfs mapfile-revs    zfslib-mapfile-vers-section-fix.patch

--- a/debian/packages/sunwzfsu/debian/changelog
+++ b/debian/packages/sunwzfsu/debian/changelog
@@ -1,3 +1,9 @@
+sunwzfsr (5.11.134-31-12271-13409) nexenta; urgency=low
+
+  * Issue 13409: Fixed section definition in libzfs mapfile-vers file
+
+ -- Ilys Usvyatsky <ilya.usvyatsky@nexenta.com>  Wed, 27 Mar 2013 18:02:44 -0700
+
 sunwzfsr (5.11.134-31-12270-13409) nexenta; urgency=low
 
   * Issue 13409: Parallel unmount of datasets for zpool export - another fix
