--- a/debian/packages/sunwzfsr/debian/changelog
+++ b/debian/packages/sunwzfsr/debian/changelog
@@ -1,3 +1,9 @@
+sunwzfsr (5.11.134-31-9474-13409) nexenta; urgency=low
+
+  * Issue 13409: Fixed section definition in libzfs mapfile-vers file
+
+ -- Ilys Usvyatsky <ilya.usvyatsky@nexenta.com>  Wed, 27 Mar 2013 18:02:44 -0700
+
 sunwzfsr (5.11.134-31-9473-10054) nexenta; urgency=high
 
   * Issue 10054: turn on zfs_fastflush by default
