--- a/debian/packages/sunwcslr/debian/changelog
+++ b/debian/packages/sunwcslr/debian/changelog
@@ -1,3 +1,9 @@
+sunwcslr (5.11.134-31-13250-13657) nexenta; urgency=high
+
+  * Issue 13657: Backport request for Enhancment 11201 - nss: need local netgroup implementation
+
+ -- Nexenta Systems <support@nexenta.com>  Tue, 23 Apr 2013 18:30:35 +0400
+
 sunwcslr (5.11.134-31-9241-0) nexenta; urgency=low
 
   * Issue 9241: backport the fix for memory leak in libsocket
