--- a/debian/packages/sunwcsr/debian/changelog
+++ b/debian/packages/sunwcsr/debian/changelog
@@ -1,3 +1,9 @@
+sunwcsr (5.11.134-31-13250-13657) nexenta; urgency=high
+
+  * Issue 13657: Backport request for Enhancment 11201 - nss: need local netgroup implementation
+
+ -- Nexenta Systems <support@nexenta.com>  Tue, 23 Apr 2013 18:30:35 +0400
+
 sunwcsr (5.11.134-31-0-100) nexenta; urgency=low
 
   * Renumber packages in preparation for 3.1 release
