--- a/debian/packages/sunwcsu/debian/changelog
+++ b/debian/packages/sunwcsu/debian/changelog
@@ -1,3 +1,9 @@
+sunwcsu (5.11.134-31-13250-13657) nexenta; urgency=high
+
+  * Issue 13657: Backport request for Enhancment 11201 - nss: need local netgroup implementation
+
+ -- Nexenta Systems <support@nexenta.com>  Tue, 23 Apr 2013 18:30:35 +0400
+
 sunwcsu (5.11.134-31-13249-13190) nexenta; urgency=high
 
   * Issue 13190: idmapd error -9961 (No AD servers)
