--- a/debian/packages/sunwhea/debian/changelog
+++ b/debian/packages/sunwhea/debian/changelog
@@ -1,3 +1,9 @@
+sunwhea (5.11.134-31-13250-13657) nexenta; urgency=high
+
+  * Issue 13657: Backport request for Enhancment 11201 - nss: need local netgroup implementation
+
+ -- Nexenta Systems <support@nexenta.com>  Tue, 23 Apr 2013 18:30:35 +0400
+
 sunwhea (5.11.134-31-12263-13272) nexenta; urgency=low
 
   * Issue 13272: Stucked Inquiry commands put a pool to degraded state
