--- a/debian/packages/sunwndmpu/debian/changelog
+++ b/debian/packages/sunwndmpu/debian/changelog
@@ -1,3 +1,9 @@
+sunwndmpu (5.11.134-31-2-12332) nexenta; urgency=medium
+
+  * Issue 12332: NDMP backup jobs error out when reaching the end of media (EOM)
+
+ -- Nexenta Systems <support@nexenta.com>  Thu, 11 Jul 2013 15:10:32 -0400
+
 sunwndmpu (5.11.134-31-1-249) nexenta; urgency=low
 
   * NEX-249 NS ndmp can't write to a brand new tape with IO error
