--- a/debian/packages/sunwzfskr/debian/changelog
+++ b/debian/packages/sunwzfskr/debian/changelog
@@ -1,3 +1,9 @@
+sunwzfskr (5.11.134-31-12281-14119) nexenta; urgency=high
+
+  * Issue 14119: BAD-TRAP panic under load
+
+ -- Nexenta Systems <support@nexenta.com>  Mon, 1 Jul 2013 17:31:10 -0700
+
 sunwzfskr (5.11.134-31-12280-13441) nexenta; urgency=high
 
   * Issue 13441: pageout() can deadlock in ZFS under memory pressure
