--- a/debian/packages/sunwstmf/debian/changelog
+++ b/debian/packages/sunwstmf/debian/changelog
@@ -1,3 +1,9 @@
+sunwstmf (5.11.134-31-13103-13796) nexenta; urgency=high
+
+  * Issue 13796: OSX FC Initiator cannot attach to LUN if LUN id is different then other OSX
+
+ -- Nexenta Systems <support@nexenta.com> Fri, 12 Jul 2013 11:15:00 -0400
+
 sunwstmf (5.11.134-31-13102-13365) nexenta; urgency=high
 
   * Issue 13365: pppt "mutex_enter: bad mutex" panic (son of 8564)
