--- a/debian/packages/sunwsmbfsu/debian/changelog
+++ b/debian/packages/sunwsmbfsu/debian/changelog
@@ -1,3 +1,9 @@
+sunwsmbfsu (5.11.134-31-12973-513) nexenta; urgency=high
+
+  * Issue SUP-513: Unable to join AD domain (with NtlmMinSeverSec set in the registry)
+
+ -- Nexenta Systems <support@nexenta.com> Tue, 16 Jul 2013 22:10:42 -0400
+
 sunwsmbfsu (5.11.134-31-12972-548) nexenta; urgency=high
 
   * Issue SUP-548: Panic from NULL pointer dereference in smb_iod_disconnect
