--- a/debian/packages/sunwckr/debian/changelog
+++ b/debian/packages/sunwckr/debian/changelog
@@ -1,3 +1,9 @@
+sunwckr (5.11.134-31-12271-12714) nexenta; urgency=medium
+
+  * Issue 12714: Corruption of the `xprt-ready' queue in svc_xprt_qdelete()
+
+ -- Nexenta Systems <support@nexenta.com>  Wed, 17 Jul 2013 23:27:06 +0200
+
 sunwckr (5.11.134-31-12270-12783) nexenta; urgency=medium
 
   * Issue 12783: Flow control is needed in rpcmod when the NFS server is unable to keep up with the network
