--- a/debian/packages/sunwsmbsu/debian/changelog
+++ b/debian/packages/sunwsmbsu/debian/changelog
@@ -1,3 +1,10 @@
+sunwsmbsu (5.11.134-31-13250-7930) nexenta; urgency=high
+
+  * Issue 7930: failover error: cannot share pool/folder - smb add share failed
+  * Issue 12412: mdb smbsess dcmd in verbose mode calculates the wrong IP address
+
+ -- Nexenta Systems <support@nexenta.com>  Fri, 30 Aug 2013 21:11:00 -0400
+
 sunwsmbsu (5.11.134-31-13249-13190) nexenta; urgency=high
 
   * Issue 13190: idmapd error -9961 (No AD servers)
